--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,11 +5,15 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building..'
+                sh 'virtualenv venv --distribute'
+                sh '. venv/bin/activate'
+                sh 'pip install -r requirements.txt'
             }
         }
         stage('Test') {
             steps {
                 echo 'Testing..'
+                sh 'python tests.py'
             }
         }
         stage('Deploy') {
