--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,13 +1,13 @@
 pipeline {
-    agent any
+    agent {
+        docker { image 'python:latest'}
+    }
 
     stages {
         stage('Build') {
             steps {
                 echo 'Building..'
-                sh 'virtualenv venv --distribute'
-                sh '. venv/bin/activate'
-                sh 'pip install -r requirements.txt'
+                sh 'python -m pip install -r requirements.txt'
             }
         }
         stage('Test') {
